# vpgo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  LICENSE.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  aminclude.am  autogen.sh  config.h.in  configure  configure.ac  doxygen.cfg  main.cpp  vcpkg-cmake.bat  vcpkg-cmake.sh  vcpkg.json
core/: CMakeLists.txt
core/src/: empty.cc
core/test/: dummy.cc
m4/: ax_prog_doxygen.m4  cpp.m4  deps.m4  tests.m4
src/: Makefile.am  Makefile.in  board.cc  board.hpp  colour.hpp  direction.hpp  game.hpp  hash.cc  hash.hpp  main.cc  pattern.cc  pattern.hpp  vpgo.hpp
src/core/: board_def.h  point.cpp  point.h
tests/: CPPLINT.cfg  Makefile.am  Makefile.in  board.cc  colour.cc  direction.cc  example.cc  game.cc  hash.cc  init.cc  tester.cpp  tester.h  ut-test.cpp  ut-test.test
